--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "symplify/easy-coding-standard": "^6.0",
+        "phpstan/phpstan": "^0.11.8",
+        "psr/simple-cache": "^1.0"
     },
     "type": "library",
     "authors": [
